# PDDwithHOSC

./: .gitignore  LICENSE  README.md
Examples/: README.md
Examples/01. SimplyExample/: Models.txt  README.md  SimplyExample.cpp
Examples/02. SimplyMetaModel/: Model.docx  Models 1 stage.docx  Models 1 stage.txt  Models_MULTI_STAGE_EXAMPLE.docx  Models_MULTI_STAGE_EXAMPLE.txt  README.md  SimplyMetaModel.cpp  stdafx.cpp
Examples/03. SimpleBOCCIIExample/: Models Ideal.docx  Models Ideal.txt  Models Trucking Asym.docx  Models Trucking Asym.txt  Models Trucking Sym.docx  Models Trucking Sym.txt  README.md  SimpleBOCCIIExample.cpp  stdafx.cpp
Examples/04. SimplyDDCCModel/: DDCCModel.docx  Models.txt  README.md  stdafx.cpp
Examples/05. SimplyDVCII/: Models Ideal.docx  Models Ideal.txt  Models TE.docx  Models TE.txt  Models TEA.docx  Models TEA.txt  README.md  SimplyDVCII.cpp  stdafx.cpp
Examples/06. SimplySKFloatingFilter/: Models.docx  Models.txt  README.md  SimplySKFloatingFilter.cpp  stdafx.cpp
Examples/06a. SimplySKFloatingFilter Asym/: Models CFMB Asym Cap Cround.txt  Models CFMB Asym.txt  Models CFMB Sym Cap Ground.txt  Models CFMB Symetric.txt  Models NO_CFMB Asym Cap Cround.txt  Models NO_CFMB Asymetric.txt  Models NO_CFMB Sym Cap Ground.txt  Models NO_CFMB Symetric.txt  Models.docx  SimplySKFloatingFilter.cpp
Examples/06b. SimplySKFloatingFilterSub/: Models Asym CFMB Prop C2.txt  Models Asym CFMB Unprop C2.txt  Models Asym NO_CFMB Prop C2.txt  Models Asym NO_CFMB Unprop C2.txt  Models Sym CFMB Prop C2.txt  Models Sym CFMB Unprop C2.txt  Models Sym NO_CFMB Prop C2.txt  (+3 more)
JuliaSymbolics/: symb_amp_all.jl  symb_amp_high.jl  symb_amp_high_C_mu.jl  symb_amp_high_C_pi.jl  symb_amp_low.jl  symb_amp_low_C1.jl  symb_amp_low_C2.jl
_New_version/: README.md
_New_version/HOSCAnalysis/: .gitignore  CMakeLists.txt  CMakeLists_old.txt  Data.txt  Doc.dox  input.txt  main.cpp
_New_version/HOSCAnalysis/BigInt/: BigInt.cpp  BigInt.h
_New_version/HOSCAnalysis/HOSCs/: FullHOSC.cpp  FullHOSC.h  HOSCContainer.cpp  HOSCContainer.h  HOSCOperator.cpp  HOSCOperator.h  Parser.cpp  Parser.h  SignedUniqueHOSCCollection.cpp  SignedUniqueHOSCCollection.h  SingleDeletion.cpp  SingleHOSC.cpp  SingleHOSC.h  UniqueHOSCCollections.h
_New_version/HOSCAnalysis/HOSCs/helpers/: NodeMaper.cpp  NodeMaper.h  helpers.cpp  helpers.h
_New_version/HOSCAnalyzer/: CMakeLists.txt  Doxyfile  main.cpp
_New_version/HOSCAnalyzer/HOSCs/: FullHOSC.cpp  FullHOSC.h  KIIndexCol.cpp  KIIndexCol.h  KISolver.h  MultilevelHOSC.cpp  MultilevelHOSC.h  SingleDeletion.h  SingleHOSC.cpp  SingleHOSC.h  SymetricHOSC.cpp  SymetricHOSC.h  UniqueHOSCCollections.h
_New_version/HOSCAnalyzer/HOSCs/helpers/: helpers.cpp  helpers.h
_Old_version_But_Working/: BNPDDEngine.sln  PDDErrors.h  PDDErrorsAndConst.h  README.md
_Side/: CMakeLists.txt
_Side/KIAnalyzer/: CMakeLists.txt  Doxyfile  README.md  input.txt  main.cpp
_Side/KIAnalyzer/HOSCs/: Cluster.cpp  Cluster.h  Edge.h  KIIndexCol.cpp  KIIndexCol.h  KISolver.h  README.md  SingleDeletion.cpp  SingleDeletion.h  SingleHOSC.cpp  SingleHOSC.h  UniqueHOSCCollections.h
_Side/KIAnalyzer/HOSCs/Parser/: Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Parser11.h
_Side/KIAnalyzer/HOSCs/helpers/: helpers.cpp  helpers.h
_Side/KIAnalyzer/Hash/: hash_combine.h
_Side/KIAnalyzer/Tests/: KIT1.cpp  KIT10.cpp  KIT11.cpp  KIT12.cpp  KIT2.cpp  KIT3.cpp  KIT4.cpp  KIT5.cpp  KIT6.cpp  KIT7.cpp  KIT8.cpp  KIT9.cpp  KITests.h
(+400 files in other folders)
